fix: исправить ошибки

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
       <h1 class="header__title">&lt;/HTML&gt;</h1>
       <p class="header__subtitle">закрывающий тег</p>
       <nav class="theme-menu header__theme-menu">
-        <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
         <ul class="theme-menu__list">
           <li class="theme-menu__item">
             <button type="button" data-theme="dark" class="theme-menu__button">
@@ -62,10 +61,10 @@
               <img
                 loading="lazy"
                 class="card__image brightness"
-                src="./images/car.png"
-                alt="Изображение машины"
+                src="./images/beginning.jpg"
+                alt="Изображение млечного пути и человека, стоящего на берегу океана"
               />
-              <p class="card__label">&lt;/HTML&gt;</p>
+              <p class="card__label">&lt;Волнение&gt;</p>
             </div>
             <div class="card__text-container">
               <p class="card__text">
@@ -74,7 +73,8 @@
                 подумать, как новые знания могут повлиять на ваше будущее.
               </p>
               <p class="card__text">
-                Место для ваших воспоминаний о начале обучения.
+                В самом начале было чувство волнения от неизвестности, смешанное
+                с любопытством и уверенностью, что меня ждёт что-то интересное.
               </p>
             </div>
             <div class="card__button-container">
@@ -130,11 +130,11 @@
             <div class="card__image-container">
               <img
                 loading="lazy"
-                class="card__image contrast"
-                src="./images/car.png"
-                alt="Изображение машины"
+                class="card__image grayscale"
+                src="./images/doubts.jpg"
+                alt="Изображение мальчика, стоящего перед баскетбольной корзиной"
               />
-              <p class="card__label">&lt;/HTML&gt;</p>
+              <p class="card__label">&lt;Сомнение&gt;</p>
             </div>
             <div class="card__text-container">
               <p class="card__text">
@@ -146,7 +146,8 @@
                 я не справлюсь?
               </p>
               <p class="card__text">
-                Место для ваших воспоминаний о начале первого спринта.
+                Страх перед чистым листом мне знаком, чтобы его преодолеть,
+                главное, сделать первый шаг.
               </p>
             </div>
             <div class="card__button-container">
@@ -202,11 +203,11 @@
             <div class="card__image-container">
               <img
                 loading="lazy"
-                class="card__image blur"
-                src="./images/car.png"
-                alt="Изображение машины"
+                class="card__image contrast"
+                src="./images/inspiration.jpg"
+                alt="Изображение человека парящего над землёй"
               />
-              <p class="card__label">&lt;CSS&gt;</p>
+              <p class="card__label">&lt;Вдохновление&gt;</p>
             </div>
             <div class="card__text-container">
               <p class="card__text">
@@ -215,7 +216,8 @@
                 Или вы, наоборот, могли вдохновиться успехами и поверить в себя.
               </p>
               <p class="card__text">
-                Место для ваших воспоминаний об окончании первого спринта.
+                Первый сданный проект придал уверенности в себе и подкрепил
+                интерес и желание продолжить начатое.
               </p>
             </div>
             <div class="card__button-container">
@@ -271,11 +273,11 @@
             <div class="card__image-container">
               <img
                 loading="lazy"
-                class="card__image opacity"
-                src="./images/car.png"
-                alt="Изображение машины"
+                class="card__image saturate"
+                src="./images/perfect.jpg"
+                alt="Изображение камней сложенных в пирамиду"
               />
-              <p class="card__label">&lt;desigions&gt;</p>
+              <p class="card__label">&lt;Наивность&gt;</p>
             </div>
             <div class="card__text-container">
               <p class="card__text">
@@ -286,7 +288,9 @@
                 сделать идеально, старались просто сделать.
               </p>
               <p class="card__text">
-                Место для ваших воспоминаний о начале второго спринта.
+                Я думал, что если изначально всё делать близко идеалу, то
+                переделывать не придётся, как я был наивен... Идеал недостижим
+                как горизонт.
               </p>
             </div>
             <div class="card__button-container">
@@ -342,11 +346,11 @@
             <div class="card__image-container">
               <img
                 loading="lazy"
-                class="card__image grayscale"
-                src="./images/car.png"
-                alt="Изображение машины"
+                class="card__image opacity"
+                src="./images/support.jpg"
+                alt="Изображение людей, держащихся за руки на фоне моря"
               />
-              <p class="card__label">care</p>
+              <p class="card__label">&lt;Поддержка&gt;</p>
             </div>
             <div class="card__text-container">
               <p class="card__text">
@@ -358,7 +362,8 @@
                 единомышленники, не правда ли?
               </p>
               <p class="card__text">
-                Место для ваших воспоминаний об окончании второго спринта.
+                Без поддержки близких, друзей и одногруппников, вряд ли я смог
+                бы проделать этот путь.
               </p>
             </div>
             <div class="card__button-container">
@@ -414,11 +419,11 @@
             <div class="card__image-container">
               <img
                 loading="lazy"
-                class="card__image saturate"
-                src="./images/car.png"
-                alt="Изображение машины"
+                class="card__image hue-rotate"
+                src="./images/angle-of-view.jpg"
+                alt="Изображение небоскрёбов, вид снизу"
               />
-              <p class="card__label">&lt;support&gt;</p>
+              <p class="card__label">&lt;Озарение&gt;</p>
             </div>
             <div class="card__text-container">
               <p class="card__text">
@@ -427,7 +432,7 @@
                 пришло время посмотреть на задачу под другим углом.
               </p>
               <p class="card__text">
-                Место для ваших воспоминаний о начале третьего спринта.
+                Подобный подход не раз помогал мне выйти из тупика.
               </p>
             </div>
             <div class="card__button-container">
@@ -483,11 +488,11 @@
             <div class="card__image-container">
               <img
                 loading="lazy"
-                class="card__image hue-rotate"
-                src="./images/car.png"
-                alt="Изображение машины"
+                class="card__image sepia"
+                src="./images/apathy.jpg"
+                alt="Изображение ржавого корабля, выброшенного на берег"
               />
-              <p class="card__label">&lt;lifes-style: none;&gt;</p>
+              <p class="card__label">&lt;Апатия&gt;</p>
             </div>
             <div class="card__text-container">
               <p class="card__text">
@@ -498,7 +503,9 @@
                 откуда вы её черпали.
               </p>
               <p class="card__text">
-                Место для ваших воспоминаний об окончании третьего спринта.
+                Если позволяло время, то смена вида деятельности давала
+                возможность "перезарядить аккумулятор", а также желание
+                доказать, прежде всего себе, что мне это по силам.
               </p>
             </div>
             <div class="card__button-container">
@@ -554,11 +561,11 @@
             <div class="card__image-container">
               <img
                 loading="lazy"
-                class="card__image sepia"
-                src="./images/car.png"
-                alt="Изображение машины"
+                class="card__image"
+                src="./images/satisfaction.jpg"
+                alt="Изображение лыжника, поднимающегося в гору"
               />
-              <p class="card__label">&lt;experience&gt;</p>
+              <p class="card__label">&lt;Удовлетворение&gt;</p>
             </div>
             <div class="card__text-container">
               <p class="card__text">
@@ -570,8 +577,9 @@
                 процесс познания. Ведь часто путь — и есть результат.
               </p>
               <p class="card__text">
-                Место, чтобы остановиться, подумать и написать, что вы
-                чувствуете в этой точке пути.
+                Чувство удовлетворения от пройденного этапа, а также понимание,
+                что впереди новые задачи, трудности, успехи и неудачи. Но ведь
+                это и есть жизнь...
               </p>
             </div>
             <div class="card__button-container">
