fix: исправить ошибки тест 1

--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
             <div class="card__image-container">
               <img
                 loading="lazy"
-                class="card__image"
+                class="card__image contrast"
                 src="./images/satisfaction.jpg"
                 alt="Изображение лыжника, поднимающегося в гору"
               />
@@ -634,7 +634,7 @@
     <footer class="footer">
       <button
         type="button"
-        onclick="window['dialog-id'].show()"
+        onclick="window['dialog-id'].showModal()"
         aria-controls="dialog-id"
         class="footer__button button"
       >
