fix: исправить ошибки тест 2

--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
       </div>
       <form method="dialog">
         <button
-          type="button"
+          type="submit"
           onclick="window['dialog-id'].close()"
           aria-controls="dialog-id"
           class="dialog__button button"
