fix: исправить ошибки тест 3

--- a/index.html
+++ b/index.html
@@ -652,12 +652,7 @@
         <p class="dialog__text">Вставьте дискету, чтобы продолжить</p>
       </div>
       <form method="dialog">
-        <button
-          type="submit"
-          onclick="window['dialog-id'].close()"
-          aria-controls="dialog-id"
-          class="dialog__button button"
-        >
+        <button type="submit" class="dialog__button button">
           <span class="button__text">ок</span>
         </button>
       </form>
